tests/lean/t10.lean.expected.out
if p ∧ q then f x else y : N
t10.lean:14:6: error: type mismatch at application
  ite (p ∧ q) q
term
  q
has type
  B
but is expected to have type
  N
cons x (cons y (cons z (cons x (cons y (cons y nil))))) : list
cons x nil : list
[ ] : list
